fix fab z-index

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,7 +3,7 @@
 @import '@/assets/styles/animation.scss';
 
 :root {
-	 --v-onboarding-overlay-z: 2050;
+	--v-onboarding-overlay-z: 2050;
 	--v-onboarding-step-z: 2100;
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 .q-drawer {
-	z-index: 10;
+	z-index: 6007;
 	background: $bgMain;
 	.noti {
 		background: #f8f8f6;
@@ -194,7 +194,7 @@ span.found {
 	position: fixed;
 	bottom: 2rem;
 	right: 2rem;
-	z-index: 6005;
+	z-index: 6003;
 	transition: 0.3s ease all;
 }
 .rot {
@@ -277,17 +277,17 @@ body.desktop .nohov .q-focus-helper {
 	}
 }
 .driver-popover.pop .driver-popover-arrow-side-left.driver-popover-arrow {
-  border-left-color: #fde047;
+	border-left-color: #fde047;
 }
 
 .driver-popover.pop .driver-popover-arrow-side-right.driver-popover-arrow {
-  border-right-color: #fde047;
+	border-right-color: #fde047;
 }
 
 .driver-popover.pop .driver-popover-arrow-side-top.driver-popover-arrow {
-  border-top-color: #fde047;
+	border-top-color: #fde047;
 }
 
 .driver-popover.pop .driver-popover-arrow-side-bottom.driver-popover-arrow {
-  border-bottom-color: #fde047;
+	border-bottom-color: #fde047;
 }
